--- a/App/styles/colors.css
+++ b/App/styles/colors.css
@@ -2,6 +2,9 @@
 .cM0-bg-main{
     background-color: #457AFB;
 }
+.cM0-bg-main-25{
+    background-color: rgba(69, 122, 251, .25);
+}
 .cM0-bg-dark{
     background-color: #393D42;
 }
@@ -11,4 +14,7 @@
 /* colors */
 .cM0-white{
  color: #F8F9FA;   
+}
+.cM0-dark{
+    color: #393D42;
 }
